# Web_HW_Module_13

./: .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: aa129f6c7c66_init.py  d437af5eabb6_init.py
src/: schemas.py
src/conf/: .env_example  config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  cloud_image.py  email.py  roles.py
src/services/templates/: email_template.html
templates/: index.html
testing/: _test_from_lecture.py  conftest.py  test_class.py  test_pytest_route_contacts.py  test_route_auth.py
tests/: test_main.py  test_unit_repository_contacts.py
